testdata/baselines/reference/submodule/conformance/importMetaNarrowing(module=es2020).errors.txt
importMetaNarrowing.ts(1,9): error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.


==== importMetaNarrowing.ts (1 errors) ====
    declare global { interface ImportMeta {foo?: () => void} };
            ~~~~~~
!!! error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
    
    if (import.meta.foo) {
      import.meta.foo();
    }
    